--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-    <div class="header_left">xxx-后台管理系统</div>
+    <div class="header_left">MySystem-后台管理系统</div>
     <div class="header_right">
         <p>您好-<%= nickname %><%= is_admin %></p>
         <button>
