--- a/views/common/menu.ejs
+++ b/views/common/menu.ejs
@@ -7,7 +7,10 @@
         <% } %>
           
             <li class="menu_item">
-                <a href="/mobile-manager.html">手机管理</a>
+                <a href="/mobile/mobile-manager.html">手机管理</a>
+            </li>
+            <li class="menu_item">
+                <a href="/brand/brand-manager.html">品牌管理</a>
             </li>
     </ul>
 </div>
